2003-11-11  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/arrange_profiles.cpp: report_error() shows only distinct
	  conflicting name.

2003-11-10  Philippe Elie  <phil.el@wanadoo.fr>

	* doc/opcontrol.1.in: reverse kernel:user in event setting description.
	  Fix #838968

2003-11-09  Philippe Elie  <phil.el@wanadoo.fr>

	* daemon/init.c:
	* daemon/liblegacy/init.c: move opd_read_fs_int ...
	* daemon/oprofiled.h:
	* daemon/oprofiled.c: here
	* daemon/liblegacy/opd_24_stats.c: dump kernel note buffer overflow and
	  buffer overlow

2003-11-09  Philippe Elie  <phil.el@wanadoo.fr>

	* utils/op_help.c: do not use OP_MAX_COUNTERS but get counter number
	  at runtime

2003-11-09  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/tests/string_manip_tests.cpp: rtrim/ltrim/trim tests

2003-11-08  Philippe Elie  <phil.el@wanadoo.fr>

	* libop/tests/Makefile.am:
	* libop/tests/mangle_tests.c: new tests: sample filename mangling

2003-11-08  Philippe Elie  <phil.el@wanadoo.fr>

	* module/x86/op_syscalls.c: fix build with 2.2 kernel

2003-11-06  Philippe Elie  <phil.el@wanadoo.fr>

	* Makefile.am: use .PHONY for module goal to not statisfy this goal
	  with the subdir named module
	* m4/findkernel.m4: minor fix.

2003-11-06  John Levon  <levon@movementarian.org>

	* Makefile.am: minor cleanup

2003-11-06  John Levon  <levon@movementarian.org>

	* gui/Makefile.am: remove unused -DKVERSION

2003-11-06  John Levon  <levon@movementarian.org>

	* configure.in: add --disable-werror and --disable-optimization

	* doc/oprofile.xml: document above. Remove docs for
	* --enable-gcov (only useful to developers)

2003-11-06  Philippe Elie  <phil.el@wanadoo.fr>

	* daemon/opd_kernel.c:
	* daemon/liblegacy/opd_kernel.c: be less paranoid about kernel range,
	  this is slightly different than the patch Thomas Spatzier tested but
	  it can't hurt (famous last words ...). This fixes s390x where kernel
	  start can be zero and was rejected.

2003-11-06  Thomas Spatzier  <tspat@de.ibm.com>
